extra trickery to avoid one extra copy